--- a/Exercises/Exercise03/index.html
+++ b/Exercises/Exercise03/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1 id="uglypolitics">CLICK HERE TO SEE WHY POLITICS ARE UGLY</h1>
+<h1 id="uglypolitics" class="flash">CLICK HERE TO SEE WHY POLITICS ARE UGLY</h1>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/script.js" content="text/javascript"></script>
