--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -8,8 +8,7 @@
 
 <body>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/script.js" content="text/javascript"></script>
 </body>
 </html>
