--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -9,9 +9,11 @@
 <body>
 
 <div id="twodoors">
-  <section class="doors"></section>
-  <section class="doors"></section>
+  <section class="doors" id="left"></section>
+  <section class="doors" id="right"></section>
 </div>
+
+<div id="circles"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/script.js" content="text/javascript"></script>
