Added various voice recognitions.

--- a/Exercises/Exercise05/index.html
+++ b/Exercises/Exercise05/index.html
@@ -8,10 +8,16 @@
 
 <body>
 
-<section>
+<section id="firstname">
   <h1>What is your name?</h1>
     <input></input>
   <button id="name">ENTER</button>
+</section>
+
+<section id="newname">
+  <h1>Name Change</h1>
+    <input></input>
+  <button id="name2">ENTER</button>
 </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
