Added z-index to css to get layering in elements.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -8,12 +8,11 @@
 
 <body>
 
-<div id="twodoors">
-  <section class="doors" id="left"></section>
-  <section class="doors" id="right"></section>
-</div>
+<h1>HELLO</h1>
 
+<div class="sliding-doors"></div>
 
+<section class="circle">HELLO</section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/script.js" content="text/javascript"></script>
