--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -8,11 +8,17 @@
 
 <body>
 
-<h1>HELLO</h1>
-
 <div class="sliding-doors"></div>
 
-<section class="circle">HELLO</section>
+<section class="input">
+  <h1>Welcome to my relentlessly indecisive mind.</h1>
+  <h2>Enter your name to participate.</h2>
+  <input type="text" placeholder="Name">
+  <button>Enter</button>
+</section>
+
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/script.js" content="text/javascript"></script>
