--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -11,9 +11,9 @@
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to my relentlessly indecisive mind.</h1>
-  <h2>Enter your name to participate.</h2>
-  <input type="text" placeholder="Name">
+  <h1>Welcome to my relentlessly<br>indecisive mind.</h1>
+  <h2>Enter your name to participate. Make sure to turn on your speaker.</h2>
+  <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
 </section>
 
@@ -21,6 +21,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script src="js/script.js" content="text/javascript"></script>
 </body>
 </html>
