Made a date-specific function voice response.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -11,11 +11,20 @@
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to my relentlessly<br>indecisive mind.</h1>
+  <h1>Welcome to my designer brain archives.</h1>
   <h2>Enter your name to participate. Make sure to turn on your speaker.</h2>
   <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
 </section>
+
+<div id="monday"></div>
+<div id="tuesday"></div>
+<div id="wednesday"></div>
+<div id="thursday"></div>
+<div id="friday"></div>
+<div id="saturday"></div>
+<div id="sunday"></div>
+
 
 
 
