Added fade to enter into the day function.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -8,6 +8,7 @@
 
 <body>
 
+
 <div class="sliding-doors"></div>
 
 <section class="input">
@@ -17,7 +18,8 @@
   <button>Enter</button>
 </section>
 
-<div id="monday"></div>
+
+<div id="block"></div>
 <div id="tuesday"></div>
 <div id="wednesday"></div>
 <div id="thursday"></div>
