Added an automatic redirect to another page on click, depending on the day.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -12,8 +12,8 @@
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to my designer brain archives.</h1>
-  <h2>Enter your name to participate. Make sure to turn on your speaker.</h2>
+  <h1>Welcome to my weekly brain archives.</h1>
+  <h2>Enter your name to take a look. Make sure to turn on your speaker.</h2>
   <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
 </section>
