Added an interesting loader until the page redirects to the next page.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -8,28 +8,26 @@
 
 <body>
 
-
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to my weekly brain archives.</h1>
+  <h1>Welcome to the human brain archives.</h1>
   <h2>Enter your name to take a look. Make sure to turn on your speaker.</h2>
   <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
 </section>
 
+<div class="loader-wrapper">
+  <div class="loader">
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+  </div>
 
-<div id="block"></div>
-<div id="tuesday"></div>
-<div id="wednesday"></div>
-<div id="thursday"></div>
-<div id="friday"></div>
-<div id="saturday"></div>
-<div id="sunday"></div>
-
-
-
-
+  <div class="text">
+    <h1>Entering brain archives</h1>
+    <h2>2017 WEEKLY DIRECTORY : Christina Gancz</h2></div>
+</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
