Added a voice response on coffee hover.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -11,7 +11,7 @@
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to the human brain archives.</h1>
+  <h1>Welcome to Christina's brain archives.</h1>
   <h2>Enter your name to take a look. Make sure to turn on your speaker.</h2>
   <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
