--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -15,6 +15,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script src="../js/weekday.js" content="text/javascript"></script>
 </body>
 
