Created a text message fade in with setInterval()

--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -13,6 +13,14 @@
     <h1 id="info">Total milliliters of Christina's coffee consumption today</h1>
   </div>
 
+  <div class="speech-bubble">
+    <img src="../img/trump.jpg">
+    <section id="text">
+      <h1>The Boyfriend<h1>
+      <p>Omg I hate this class... the professor is still using an overhead projector from the 90s. FML!</p>
+      <h1 class="reply">Reply</h1>
+    </section>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
