Added a reply function to the text message.

--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -22,6 +22,9 @@
     </section>
   </div>
 
+  <textarea></textarea>
+  <button>SEND</button>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script src="../js/weekday.js" content="text/javascript"></script>
