Added automatic text message responses.

--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -22,8 +22,19 @@
     </section>
   </div>
 
-  <textarea></textarea>
+  <textarea id="options"></textarea>
   <button>SEND</button>
+
+<section id="float">
+  <div id="one" class="responses"></div>
+  <div id="2" class="responses"></div>
+  <div id="3" class="responses"></div>
+  <div id="4" class="responses"></div>
+  <div id="5" class="responses"></div>
+</section>
+
+<div id="holder"></div>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
