--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -31,6 +31,7 @@
   <div id="3" class="responses"></div>
   <div id="4" class="responses"></div>
   <div id="5" class="responses"></div>
+  <div id="6" class="responses"></div>
 </section>
 
 <div id="holder"></div>
