Added animation to reply responses.

--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <div class="simple-shape two"></div>
 
   <div id="coffeecounter">
     <div id="counter"></div>
@@ -35,6 +36,8 @@
 </section>
 
 <div id="holder"></div>
+
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
