Added some more commenting.

--- a/Assignments/Assignment1/index.html
+++ b/Assignments/Assignment1/index.html
@@ -11,7 +11,7 @@
 <div class="sliding-doors"></div>
 
 <section class="input">
-  <h1>Welcome to Christina's brain archives.</h1>
+  <h1>Welcome to Christina's technology behaviour archives.</h1>
   <h2>Enter your name to take a look. Make sure to turn on your speaker.</h2>
   <input type="text" placeholder="Name" id="inputvalue">
   <button>Enter</button>
@@ -25,8 +25,8 @@
   </div>
 
   <div class="text">
-    <h1>Entering brain archives</h1>
-    <h2>2017 WEEKLY DIRECTORY : Christina Gancz</h2></div>
+    <h1>Entering technology behaviour archives</h1>
+    <h2>2017 WEEKLY DIRECTORY : Christina Gancz</h2>
 </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
