Commenting the script for better reading.

--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/trump.jpg">
+    <img src="../img/boyfriend.jpg">
     <section id="text">
       <h1>The Boyfriend<h1>
       <p>Omg I hate this class... the professor is still using an overhead projector from the 90s. FML!</p>
