--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Christina's Technology Behaviour Archives : 2017</title>
-<link rel="stylesheet" type="text/css" href="../css/weekday.css">
+<link rel="stylesheet" type="text/css" href="../css/allweekdays.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-  <script src="../js/weekday.js" content="text/javascript"></script>
+  <script src="../js/thursday.js" content="text/javascript"></script>
 </body>
 
 </html>
