Added photos of random people as the people text messaging Christina.

--- a/Assignments/Assignment1/html/friday.html
+++ b/Assignments/Assignment1/html/friday.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/boyfriend.jpg">
+    <img src="../img/friend2.jpg">
     <section id="text">
       <h1>Friend #2<h1>
       <p>Drinks tonight?????? Need to go out asap school is killing me.</p>
