--- a/Assignments/Assignment1/html/monday.html
+++ b/Assignments/Assignment1/html/monday.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/boyfriend.jpg">
+    <img src="../img/sister.jpg">
     <section id="text">
       <h1>The Sister<h1>
       <p>Hey there girllll. You haven't been over in like a million years. Come help me cook supper tonight :D</p>
