--- a/Assignments/Assignment1/html/saturday.html
+++ b/Assignments/Assignment1/html/saturday.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/boyfriend.jpg">
+    <img src="../img/brother.jpg">
     <section id="text">
       <h1>The Brother<h1>
       <p>Can I call you?? I'm on my drive to Brandon and I'm uber bored lol.</p>
