--- a/Assignments/Assignment1/html/tuesday.html
+++ b/Assignments/Assignment1/html/tuesday.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/boyfriend.jpg">
+    <img src="../img/mom.jpg">
     <section id="text">
       <h1>The Mother<h1>
       <p>How about a family supper tomorrow night? Can the boyfriend come? :)</p>
