--- a/Assignments/Assignment1/html/sunday.html
+++ b/Assignments/Assignment1/html/sunday.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="speech-bubble">
-    <img src="../img/boyfriend.jpg">
+    <img src="../img/friend1.jpg">
     <section id="text">
       <h1>Friend #1<h1>
       <p>Let's go for a drive. Coffee is needed. Now.</p>
