--- a/Assignments/Assignment1/html/thursday.html
+++ b/Assignments/Assignment1/html/thursday.html
@@ -42,7 +42,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-  <script src="../js/thursday.js" content="text/javascript"></script>
+  <script src="../js/mainscript.js" content="text/javascript"></script>
 </body>
 
 </html>
