--- a/Exercises/Exercise06/index.html
+++ b/Exercises/Exercise06/index.html
@@ -1,48 +1,18 @@
-<!-- ************************************************************************
-
-Color Controller
-Pippin Barr
-
-A simple example of using the data that comes out of our tracking.js tracker
-to actually control something on the page. In this case we'll control the
-RGB color of a DIV based on the colors the webcam can see.
-
-************************************************************************ -->
-
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <title>Color Controller</title>
-
+  <title>Exercise 6</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-
-  <!-- Including jQuery by default -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <!-- Uncomment next two lines to include jQuery UI -->
-  <!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-
-  <!-- We include tracking.js (means it needs to be in our js folder!) -->
   <script src="js/tracking-min.js"></script>
-
-  <!-- We include our own script file(s) -->
   <script src="js/script.js" content="text/javascript"></script>
-
 </head>
 
 <body>
 
-  <!-- This is the div we'll change the color of -->
   <div id="color"></div>
 
-  <!-- Here is our video element to put the webcam data in -->
-  <!-- I made the video quite small as it appears to present performance issues? -->
   <video style="visibility: hidden" id="webcam" width="320" height="240" preload autoplay loop muted></video>
 
 </body>
