--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Assignment 2/title>
+  <title>Assignment 2</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/tracking-min.js"></script>
