Added text to webpage

--- a/Exercises/Exercise07/index.html
+++ b/Exercises/Exercise07/index.html
@@ -15,13 +15,60 @@
 
 <body>
 
-<div class="block"></div>
+<section id="trigger1">
+  <h1>Assignment 2 Pitch</h1>
+  <h2>The Virtual Doctor</h2>
+</section>
 
-<div class="block" id="trigger">This be the verse</div>
+<section id="trigger2">
+  <h2>The Idea</h2>
+  <p>I was very sick last week with an ear infection, laryngitis and plenty of other cold stuff. No worries, I'm no longer contagious! Through my non-stop visits to the clinic and constant questioning of what kind of sickness I was experiencing, my dad let me know that I was able to make an appointment online to see a doctor first thing in the morning, at my requested clinic. I was able to connect my cell-phone number to the online application and got constant text messages and calls to remind me of my appointment, and how many clients were before me. Sure enough, I was able go to my appointment at the time it had indicated, without waiting endless hours at the clinic to see a doctor. I thought it was a marvelous idea, certainly a huge step forward from all the other years I went to that same clinic and would wait seven hours just to get a prescription for ear infection medication.</p>
+  <p>I've always been interested in the evolution of technology and its relationship with businesses and institutions. I began to ask myself how the evolution of the technology used in medical services would develop by the year 3000. Then it came to me- what if doctors and medical services all became a virtual reality, and objects such as your computer mouse would be used to track health instead of an actual physical human being doing this for you? Would doctors become obsolete? Would medication be provided only through delivery and places like the pharmacies would no longer exist? Would this virtual reality simply become part of a world that avoids all types of human to human interactions?</p>
+  <p>And so, for my final assignment, I would like to experiment with these ideas and use the web as a means to provide this virtual reality that I am currently speculating about. I would like to use things such as the webcam, the computer mouse, and various other applications that humans use while operating the web and turn them into health tracking devices. I would also like to add a commercial side to this virtual reality, such as a calculator that tells you what kind of medication/cosmetic you should use based on your health records, and offer a link to purchase the item.</p>
+</section>
 
-<div class="block"></div>
+<section id="trigger3">
+  <h2>Medical Applications to be Integrated</h2>
+    <h3>Diagnosis calculator</h3>
+    <h3>Filtered search/popup of medication/cosmetic that the virtual doctor recommends + pushes you to buy</h3>
+    <h3>Heart rate monitor</h3>
+    <h3>Detection of mood through webcam</h3>
+    <h3>Agenda (ex knows if you're travelling, offers you a special type of sunscreen)</h3>
+    <h3>Workout + nutrition logger (tells you if you're in shape or not, pushed you to exercise)</h3>
+</section>
 
-<div class="block" id="fixedblock">Making me dizzy</div>
+<section id="trigger4">
+  <h2>Existing Examples</h2>
+    <a href="https://www.fitbit.com/" target="_blank">The Fitbit web application that uses infographic-like design to show statistics</a>
+    <a href="	https://symptomchecker.isabelhealthcare.com/suggest_diagnoses_advanced/landing_page" target="_blank">Symptom Checker</a>
+    <a href="	https://eqvirtual.com/quebec/en/how-it-works/" target="_blank">Not entirely a virtual medical service, but uses the web to find the most efficient doctor/clinic for your situation</a>
+    <a href="https://www.awwwards.com/period-tracker-app-design.html" target="_blank">I enjoy the comic side to this app design, using illustration to make the user feel more welcome and understood</a>
+    <a href="http://www.cleverbot.com/">A robot friend, a virtual person</a>
+</section>
+
+<section id="trigger5">
+  <h2>Javascript Libraries</h2>
+    <h3>jQuery</h3>
+    <h3>tracker.js</h3>
+    <h3>ResponsiveVoice</h3>
+    <h3>annyang!</h3>
+</section>
+
+<section id="trigger6">
+  <h2>Underlying Code</h2>
+    <h3>Using many mouse-led events such as : .click, .mouseover, .mousedown, mouseover</h3>
+    <h3>Using keyboard-led events such as: .keypress</h3>
+    <h3>Using tracker.js to track webcam activities such as movement and colour change</h3>
+    <h3>Using responsiveVoice to act as of the virtual doctor is actually speaking with the user</h3>
+    <h3>Using annyang! for the virtual doctor to recognize what the user is saying to it</h3>
+</section>
+
+<section id="trigger7">
+  <h2>Mockups</h2>
+    <img src="img/1_login_page.jpg">
+    <img src="img/2_dashboard.jpg">
+    <img src="img/3_mycart.jpg">
+</section>
 
 </body>
 
