Added a title fade.

--- a/Exercises/Exercise07/index.html
+++ b/Exercises/Exercise07/index.html
@@ -16,8 +16,8 @@
 <body>
 
 <section id="trigger1">
-  <h1>Assignment 2 Pitch</h1>
-  <h2>The Virtual Doctor</h2>
+  <h1 class="header">HERE'S MY PITCH.</h1>
+  <h2 class="subtitle">The Virtual Doctor</h2>
 </section>
 
 <section id="trigger2">
