--- a/Exercises/Exercise07/index.html
+++ b/Exercises/Exercise07/index.html
@@ -20,7 +20,7 @@
   <h2 class="subtitle">The Virtual Doctor</h2>
 </section>
 
-<section id="trigger2">
+<section class="trigger2">
   <h2>The Idea</h2>
   <p>I was very sick last week with an ear infection, laryngitis and plenty of other cold stuff. No worries, I'm no longer contagious! Through my non-stop visits to the clinic and constant questioning of what kind of sickness I was experiencing, my dad let me know that I was able to make an appointment online to see a doctor first thing in the morning, at my requested clinic. I was able to connect my cell-phone number to the online application and got constant text messages and calls to remind me of my appointment, and how many clients were before me. Sure enough, I was able go to my appointment at the time it had indicated, without waiting endless hours at the clinic to see a doctor. I thought it was a marvelous idea, certainly a huge step forward from all the other years I went to that same clinic and would wait seven hours just to get a prescription for ear infection medication.</p>
   <p>I've always been interested in the evolution of technology and its relationship with businesses and institutions. I began to ask myself how the evolution of the technology used in medical services would develop by the year 3000. Then it came to me- what if doctors and medical services all became a virtual reality, and objects such as your computer mouse would be used to track health instead of an actual physical human being doing this for you? Would doctors become obsolete? Would medication be provided only through delivery and places like the pharmacies would no longer exist? Would this virtual reality simply become part of a world that avoids all types of human to human interactions?</p>
@@ -39,35 +39,43 @@
 
 <section id="trigger4">
   <h2>Existing Examples</h2>
-    <a href="https://www.fitbit.com/" target="_blank">The Fitbit web application that uses infographic-like design to show statistics</a>
+    <a href="https://www.fitbit.com/" target="_blank">Fitbit</a>
     <a href="	https://symptomchecker.isabelhealthcare.com/suggest_diagnoses_advanced/landing_page" target="_blank">Symptom Checker</a>
-    <a href="	https://eqvirtual.com/quebec/en/how-it-works/" target="_blank">Not entirely a virtual medical service, but uses the web to find the most efficient doctor/clinic for your situation</a>
-    <a href="https://www.awwwards.com/period-tracker-app-design.html" target="_blank">I enjoy the comic side to this app design, using illustration to make the user feel more welcome and understood</a>
-    <a href="http://www.cleverbot.com/">A robot friend, a virtual person</a>
+    <a href="	https://eqvirtual.com/quebec/en/how-it-works/" target="_blank">EQ Virtual</a>
+    <a href="https://www.awwwards.com/period-tracker-app-design.html" target="_blank"> Period Tracker</a>
+    <a href="http://www.cleverbot.com/">Everbot</a>
 </section>
 
 <section id="trigger5">
   <h2>Javascript Libraries</h2>
-    <h3>jQuery</h3>
-    <h3>tracker.js</h3>
-    <h3>ResponsiveVoice</h3>
-    <h3>annyang!</h3>
+    <h3 class="extend">jQuery</h3>
+    <h3 class="extend">tracker.js</h3>
+    <h3 class="extend">ResponsiveVoice</h3>
+    <h3 class="extend">annyang!</h3>
 </section>
 
 <section id="trigger6">
   <h2>Underlying Code</h2>
-    <h3>Using many mouse-led events such as : .click, .mouseover, .mousedown, mouseover</h3>
-    <h3>Using keyboard-led events such as: .keypress</h3>
-    <h3>Using tracker.js to track webcam activities such as movement and colour change</h3>
-    <h3>Using responsiveVoice to act as of the virtual doctor is actually speaking with the user</h3>
-    <h3>Using annyang! for the virtual doctor to recognize what the user is saying to it</h3>
+    <p>Using many mouse-led events such as : .click, .mouseover, .mousedown, mouseover</p>
+    <p>Using keyboard-led events such as: .keypress</p>
+    <p>Using tracker.js to track webcam activities such as movement and colour change</p>
+    <p>Using responsiveVoice to act as of the virtual doctor is actually speaking with the user</p>
+    <p>Using annyang! for the virtual doctor to recognize what the user is saying to it</p>
 </section>
 
 <section id="trigger7">
-  <h2>Mockups</h2>
-    <img src="img/1_login_page.jpg">
+  <div id="image1">
+    <h2>Mockups</h2>
+      <img src="img/1_login_page.jpg">
+  </div>
+
+  <div id="image2">
     <img src="img/2_dashboard.jpg">
+  </div>
+
+  <div id="image3">
     <img src="img/3_mycart.jpg">
+  </div>
 </section>
 
 </body>
