--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -3,57 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>face tracking</title>
-  
-  
-  
-      <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-        video, canvas {
-    margin-left: 0px;
-    margin-top: 0px;
-    position: absolute;
-  }
-.our_container{
- position:absolute;
-  margin-top:250px;
-  width:320px;
-  height:240px;
-  background:#ddd;
-}
-.message{
-  background:#ccc;
-}
-.object{
-  display: inline-block;
-  width:5px;
-  height:5px;
-  background-color:black;
-  transition:all 0.3s;
-}
-    </style>
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-
 </head>
 
 <body>
-  <div class="demo-frame">
-  <div class="demo-container">
-    <video id="video" width="320" height="240" preload autoplay loop muted></video>
-    <canvas id="canvas" width="320" height="240"></canvas>
+
+  <div id="webcam">
+      <video id="video" preload autoplay loop muted width="900" height="700"></video>
+      <canvas id="canvas" width="900" height="700"></canvas>
   </div>
-  <div class="our_container">
-    <div class="message"></div>
-    <div class="object"></div>
-  </div>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js'></script>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.2/dat.gui.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-
-    <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
