Added a hue/saturation filter to the webcam image.

--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div id="webcam">
-      <video id="video" preload autoplay loop muted width="900" height="700"></video>
+      <video id="video" preload autoplay loop muted></video>
       <canvas id="canvas" width="900" height="700"></canvas>
   </div>
 
