Adjusted the stroke width of the webcam tracker.

--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -14,6 +14,9 @@
       <canvas id="canvas" width="900" height="700"></canvas>
   </div>
 
+  <section id="login">
+  </section>
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js'></script>
