--- a/Exercises/Exercise09/index.html
+++ b/Exercises/Exercise09/index.html
@@ -1,44 +1,28 @@
-<!-- ************************************************************************
-
-Condiments
-Pippin Barr
-
-A webpage that randomly generates descriptions of condiments.
-
-************************************************************************ -->
 
 <!DOCTYPE html>
 
 <html lang="en">
-
 <head>
-
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <title>Condiments</title>
-
+  <title>Names and Feelings</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-
-  <!-- Including jQuery by default -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <!-- Uncomment next two lines to include jQuery UI -->
-  <!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-
-  <!-- <script src="data/data.json"></script> -->
-
-  <!-- We include our own script file(s) -->
   <script src="js/script.js" content="text/javascript"></script>
-
 </head>
-
-<!-- Comment about the body of the HTML -->
 
 <body>
 
-  <!-- Set up the basic sentence structure which we'll add random words to -->
-  <span id="condiment"></span> is like <span id="cat"></span> in <span id="room"></span>.
+
+
+  <div>
+    <h1>I KNOW WHO YOU ARE.</h1>
+    <h3>Your name is</h3>
+    <h3 id="firstname"></h3>
+    <h3 id="lastname"></h3>
+    <h3>and you're</h3>
+    <h3 id="moods"></h3>
+    <h2>If you're not satisfied with the results, click on the boxes and become someone else!</h2>
+  </div>
 
 </body>
 
