Added interesting pulsing effect to the login text.

--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <section id="login">
-    <h1 id="scanning">Finding medical records...</h1>
+    <h1 id="scanning" class="pulse1"></h1>
   </section>
 
 <!-- Tracking.js files and jQuery are stored on an online server -->
