Added a random name generator in the login section.

--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -18,10 +18,10 @@
   <section id="login">
     <h1>Virtual Doctor</h1>
     <h2>Welcome to Virtual Doctor! Here you will find all the services you need to diagnose and treat any illness. Please wait one moment as the
-        doctor logs you in.
-    </h2>
+        doctor logs you in.</h2>
     <h1 id="scanning" class="pulse1"></h1>
     <h2 id="pixels"></h2>
+    <p id="name">HELLO</p>
   </section>
 
 <!-- Tracking.js files and jQuery are stored on an online server -->
