Added the function that generates random user profile to appear at a certain interval.

--- a/Assignments/Assignment2/index.html
+++ b/Assignments/Assignment2/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>face tracking</title>
+  <title>Virtual Doctor</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
@@ -21,7 +21,33 @@
         doctor logs you in.</h2>
     <h1 id="scanning" class="pulse1"></h1>
     <h2 id="pixels"></h2>
-    <p id="name">HELLO</p>
+  </section>
+
+  <section id="profile">
+
+    <h1>Patient Profile</h1>
+    <h2>You have been logged in as a returning patient by the Virtual Doctor.</h2>
+
+    <div class="profiletext">
+      <h4>Name</h4>
+      <h3 id="name"></h3>
+    </div>
+
+    <div class="profiletext">
+      <h4>Age</h4>
+      <h3 id="age"></h3>
+    </div>
+
+    <div class="profiletext">
+      <h4>Residence</h4>
+      <h3 id="location"></h3>
+    </div>
+
+    <div class="profiletext">
+      <h4>Last Diagnosis</h4>
+      <h3 id="diagnosis"></h3>
+    </div>
+
   </section>
 
 <!-- Tracking.js files and jQuery are stored on an online server -->
