--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -8,7 +8,36 @@
 
 <body>
 
-  <h1>Virtual Doctor<h1>
+  <div id="title">
+    <h1>Virtual Doctor<h1>
+    <h2>Diagnosis and Treatment Services</h2>
+  </div>
+
+  <div id="dashboard">
+    <section id="diagnosiscenter">
+      <h2>Diagnosis Center</h2>
+    </section>
+
+    <section id="xray">
+      <h2>X-Ray Services</h2>
+    </section>
+
+    <section id="psychologist">
+      <h2>Psychologist and Counsellor</h2>
+    </section>
+
+    <section id="heartrate">
+      <h2>Heart Rate Tracker</h2>
+    </section>
+
+    <section id="workout">
+      <h2>Workout Log</h2>
+    </section>
+
+    <section id="pharmacy">
+      <h2>Pharmacy</h2>
+    </section>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
