--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -13,33 +13,38 @@
     <h2>Diagnosis and Treatment Services</h2>
   </div>
 
+  <div class='draggable resizable'></div>
+
   <div id="dashboard">
-    <section id="diagnosiscenter">
+    <section id="diagnosiscenter" class='draggable resizable'>
       <h2>Diagnosis Center</h2>
     </section>
 
-    <section id="xray">
+    <section id="xray" class='draggable resizable'>
       <h2>X-Ray Services</h2>
     </section>
 
-    <section id="psychologist">
+    <section id="psychologist" class='draggable resizable'>
       <h2>Psychologist and Counsellor</h2>
     </section>
 
-    <section id="heartrate">
+    <section id="heartrate" class='draggable resizable'>
       <h2>Heart Rate Tracker</h2>
     </section>
 
-    <section id="workout">
+    <section id="workout" class='draggable resizable'>
       <h2>Workout Log</h2>
     </section>
 
-    <section id="pharmacy">
+    <section id="pharmacy" class='draggable resizable'>
       <h2>Pharmacy</h2>
     </section>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js'></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
 
 </body>
