--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -13,7 +13,9 @@
     <h2>Diagnosis and Treatment Services</h2>
   </div>
 
-  <div class='draggable resizable'></div>
+  <div id="navigation">
+    <h1>hello</h1>
+  </div>
 
   <div id="dashboard">
     <section id="diagnosiscenter" class='draggable resizable'>
