Made dashboard responsive.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -14,7 +14,6 @@
   </div>
 
   <div id="navigation">
-    <h1>hello</h1>
   </div>
 
   <div id="dashboard">
@@ -22,7 +21,7 @@
       <h2>Diagnosis Center</h2>
     </section>
 
-    <section id="xray" class='draggable resizable'>
+    <section id="xray" class='draggable resizable margin'>
       <h2>X-Ray Services</h2>
     </section>
 
@@ -34,7 +33,7 @@
       <h2>Heart Rate Tracker</h2>
     </section>
 
-    <section id="workout" class='draggable resizable'>
+    <section id="workout" class='draggable resizable margin'>
       <h2>Workout Log</h2>
     </section>
 
