Adding some styling to the navigation elements.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -14,31 +14,48 @@
   </div>
 
   <div id="navigation">
+    <section id="profile">
+      <h3>Profile</h3>
+      <h4>Profile text goes here</h4>
+    </section>
+
+    <section id="assistant">
+      <h3>Assistant</h3>
+      <h4>Audio Assist</h4>
+      <h4>Rearrange the Services</h4>
+      <h4>Enlarge the Services</h4>
+    </section>
   </div>
 
   <div id="dashboard">
     <section id="diagnosiscenter" class='draggable resizable'>
       <h2>Diagnosis Center</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
     <section id="xray" class='draggable resizable margin'>
-      <h2>X-Ray Services</h2>
+      <h2>X-Ray<br>Services</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
     <section id="psychologist" class='draggable resizable'>
-      <h2>Psychologist and Counsellor</h2>
+      <h2>Psychiatrist / Counsellor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
     <section id="heartrate" class='draggable resizable'>
       <h2>Heart Rate Tracker</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
     <section id="workout" class='draggable resizable margin'>
-      <h2>Workout Log</h2>
+      <h2>Workout<br>Log</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
     <section id="pharmacy" class='draggable resizable'>
-      <h2>Pharmacy</h2>
+      <h2>Pharmacy / Community</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
   </div>
 
