Added some buttons to enable and disable my functions

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -21,9 +21,13 @@
 
     <section id="assistant">
       <h3>Assistant</h3>
-      <h4>Audio Assist</h4>
-      <h4>Rearrange the Services</h4>
-      <h4>Enlarge the Services</h4>
+      <h4 id="audio">Audio Assist</h4>
+      <h4 id="rearrange">Rearrange the Services</h4>
+        <button id="rearrange-on">MOVE</button>
+        <button id="rearrange-off">LOCK</button>
+      <h4 id="enlarge">Enlarge the Services</h4>
+        <button id="enlarge-on">MOVE</button>
+        <button id="enlarge-off">LOCK</button>
     </section>
   </div>
 
