--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -21,12 +21,17 @@
 
     <section id="assistant">
       <h3>Assistant</h3>
+
       <h4 id="audio">Audio Assist</h4>
+        <button id="audio-on">ON</button>
+        <button id="audio-off">OFF</button>
+
       <h4 id="rearrange">Rearrange the Services</h4>
         <button id="rearrange-on">MOVE</button>
         <button id="rearrange-off">LOCK</button>
+
       <h4 id="enlarge">Enlarge the Services</h4>
-        <button id="enlarge-on">MOVE</button>
+        <button id="enlarge-on">ENLARGE</button>
         <button id="enlarge-off">LOCK</button>
     </section>
   </div>
@@ -63,8 +68,8 @@
     </section>
   </div>
 
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js'></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
