--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -16,7 +16,7 @@
   <div id="navigation">
     <section id="profile">
       <h3>Profile</h3>
-      <h4>Profile text goes here</h4>
+      <h4 id="info"></h4>
     </section>
 
     <section id="assistant">
