Added some commenting to my functions.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -16,7 +16,11 @@
   <div id="navigation">
     <section id="profile">
       <h3>Profile</h3>
-      <h4 id="info"></h4>
+      <h4 id="profilename"></h4>
+      <h4 id="profileage"></h4>
+      <h4 id="profileresidence"></h4>
+      <h4 id="profilediagnosis"></h4>
+
     </section>
 
     <section id="assistant">
