Added some styling to the profile section.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -16,9 +16,13 @@
   <div id="navigation">
     <section id="profile">
       <h3>Profile</h3>
+      <h4 class="profileheader">NAME AND AGE</h4>
       <h4 id="profilename"></h4>
-      <h4 id="profileage"></h4>
+
+      <h4 class="profileheader">RESIDENCE</h4>
       <h4 id="profileresidence"></h4>
+
+      <h4 class="profileheader">LAST DIAGNOSIS</h4>
       <h4 id="profilediagnosis"></h4>
 
     </section>
