--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -46,7 +46,7 @@
 
   <div id="dashboard">
     <section id="diagnosiscenter" class='draggable resizable'>
-      <h2>Diagnosis Center</h2>
+      <h2>Diagnosis<br>Center</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
     </section>
 
@@ -80,6 +80,8 @@
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js'></script>
+  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+  <script src="../js/jquery.blast.min.js" content="text/javascript"></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
 
 </body>
