Added some commenting.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -31,16 +31,16 @@
       <h3>Assistant</h3>
 
       <h4 id="audio">Audio Assist</h4>
-        <button id="audio-on">ON</button>
-        <button id="audio-off">OFF</button>
+        <button id="audio-on" class="buttonleft">ON</button>
+        <button id="audio-off" class="buttonright">OFF</button>
 
       <h4 id="rearrange">Rearrange the Services</h4>
-        <button id="rearrange-on">MOVE</button>
-        <button id="rearrange-off">LOCK</button>
+        <button id="rearrange-on" class="buttonleft">MOVE</button>
+        <button id="rearrange-off" class="buttonright">LOCK</button>
 
       <h4 id="enlarge">Enlarge the Services</h4>
-        <button id="enlarge-on">ENLARGE</button>
-        <button id="enlarge-off">LOCK</button>
+        <button id="enlarge-on" class="buttonleft">ENLARGE</button>
+        <button id="enlarge-off" class="buttonright">LOCK</button>
     </section>
   </div>
 
