Added a function for things to happen when the size of the services change.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -83,6 +83,11 @@
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script src="../js/jquery.blast.min.js" content="text/javascript"></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
+  <script src="../js/diagnosis_center.js" content="text/javascript"></script>
+  <script src="../js/heartrate_tracker.js" content="text/javascript"></script>
+  <script src="../js/pharmacy_community.js" content="text/javascript"></script>
+  <script src="../js/workout_log.js" content="text/javascript"></script>
+  <script src="../js/xray_services.js" content="text/javascript"></script>
 
 </body>
 </html>
