Added function for a div to appear after the box is a certain width

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Virtual Doctor Dashboard</title>
 <link rel="stylesheet" type="text/css" href="../css/dashboard.css">
+<link rel="stylesheet" type="text/css" href="../css/diagnosis_center.css">
 </head>
 
 <body>
@@ -48,6 +49,11 @@
     <section id="diagnosiscenter" class='draggable resizable'>
       <h2>Diagnosis<br>Center</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+
+      <div id="diagnosis-reveal">
+        HELLO
+      </div>
+
     </section>
 
     <section id="xray" class='draggable resizable margin'>
