Added a pie chart

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -50,8 +50,9 @@
       <h2>Diagnosis<br>Center</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
 
+
       <div id="diagnosis-reveal">
-        HELLO
+        <canvas id="chart" width="250" height="250"></canvas>
       </div>
 
     </section>
