Added a addClass function to revealing elements in the diagnosis center.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -48,7 +48,7 @@
   <div id="dashboard">
     <section id="diagnosiscenter" class='draggable resizable'>
       <h2>Diagnosis<br>Center</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+      <p>Find out how to treat your diagnosed disease/illness. Find out how prone you are to becoming sick or disabled. See your family history of disease and illness.</p>
 
 
       <div id="diagnosis-reveal">
@@ -59,27 +59,27 @@
 
     <section id="xray" class='draggable resizable margin'>
       <h2>X-Ray<br>Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
     </section>
 
     <section id="psychologist" class='draggable resizable'>
       <h2>Psychiatrist / Counsellor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
     </section>
 
     <section id="heartrate" class='draggable resizable'>
       <h2>Heart Rate Tracker</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
     </section>
 
     <section id="workout" class='draggable resizable margin'>
       <h2>Workout<br>Log</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
     </section>
 
     <section id="pharmacy" class='draggable resizable'>
       <h2>Pharmacy / Community</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit ut.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
     </section>
   </div>
 
