Added some svg images to the services.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -48,39 +48,42 @@
   <div id="dashboard">
     <section id="diagnosiscenter" class='draggable resizable'>
       <h2>Diagnosis<br>Center</h2>
-      <p>Find out how to treat your diagnosed disease/illness. Find out how prone you are to becoming sick or disabled. See your family history of disease and illness.</p>
-
+      <p>Diagnose, treat, and calculate your likelihood to get sick</p>
+      <img src="../img/diagnosis.svg">
 
       <div id="diagnosis-reveal">
         <canvas id="chart" width="250" height="250"></canvas>
       </div>
-
     </section>
 
     <section id="xray" class='draggable resizable margin'>
       <h2>X-Ray<br>Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
+      <p>Scan a body part to check for a potential disease and illness</p>
+      <img src="../img/xray.svg">
     </section>
 
     <section id="psychologist" class='draggable resizable'>
       <h2>Psychiatrist / Counsellor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
+      <p>This service will listen to you and guide you in the right direction</p>
+      <img src="../img/psychiatrist.svg">
     </section>
 
     <section id="heartrate" class='draggable resizable'>
       <h2>Heart Rate Tracker</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
+      <p>Track your heart rate to see your current heart health levels</p>
+      <img src="../img/heartrate.svg">
     </section>
 
     <section id="workout" class='draggable resizable margin'>
       <h2>Workout<br>Log</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
+      <p>See your recent workouts and track your physical activity</p>
+      <img src="../img/exercise.svg">
     </section>
 
     <section id="pharmacy" class='draggable resizable'>
       <h2>Pharmacy / Community</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nisl erat, tincidunt vitae nibh tincidunt, pretium iaculis neque. Quisque aliquam quam ante, ac faucibus nisl hendrerit</p>
-    </section>
+      <p>Order medication and connect to people with similar health</p>
+      <img src="../img/medication.svg">
   </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
