Added text for percentage with random diagnoses

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -52,8 +52,10 @@
       <img src="../img/diagnosis.svg">
 
       <div id="diagnosis-reveal">
-        <canvas id="chart" width="250" height="250"></canvas>
-        <h4 id="percentage">INSERT TEXT HERE</h4>
+        <canvas id="chart" width="300" height="300"></canvas>
+        <h4 id="chartValue1">INSERT TEXT HERE</h4>
+        <h4 id="chartValue2">INSERT TEXT HERE</h4>
+        <h4 id="chartValue3">INSERT TEXT HERE</h4>
       </div>
     </section>
 
