Added some styling elements.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -53,9 +53,16 @@
 
       <div id="diagnosis-reveal">
         <canvas id="chart" width="300" height="300"></canvas>
-        <h4 id="chartValue1">INSERT TEXT HERE</h4>
-        <h4 id="chartValue2">INSERT TEXT HERE</h4>
-        <h4 id="chartValue3">INSERT TEXT HERE</h4>
+
+        <div id="possible-diagnoses">
+          <h3>Probability of Illness / Sickness</h3>
+          <h4 id="chartValue1">INSERT TEXT HERE</h4>
+          <h4 id="chartDiagnosis1">INSERT TEXT HERE</h4>
+          <h4 id="chartValue2">INSERT TEXT HERE</h4>
+          <h4 id="chartDiagnosis2">INSERT TEXT HERE</h4>
+          <h4 id="chartValue3">INSERT TEXT HERE</h4>
+          <h4 id="chartDiagnosis3">INSERT TEXT HERE</h4>
+        </div>
       </div>
     </section>
 
