--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -63,6 +63,9 @@
           <h4 id="chartValue3">INSERT TEXT HERE</h4>
           <h4 id="chartDiagnosis3">INSERT TEXT HERE</h4>
         </div>
+
+        <p>Drag-and-drop the blue box.</p>
+
       </div>
     </section>
 
@@ -101,6 +104,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js'></script>
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/211619/framer.js'></script>
   <script src="../js/jquery.blast.min.js" content="text/javascript"></script>
   <script src="../js/dashboard.js" content="text/javascript"></script>
   <script src="../js/diagnosis_center.js" content="text/javascript"></script>
